# beCode

./: .gitignore  CLAUDE.md  backlog_ide_dados.csv  backlog_ide_dados.md
.claude/: settings.json
docs/architecture/: 1.2-bounded-contexts.md  1.2-c4-componentes.md  1.2-c4-containers.md  1.2-c4-contexto.md  1.2-convencoes-apis.md  1.2-fluxos-principais.md  1.2-mapa-servicos.md  1.3-estrategia-iac.md  1.3-requisitos-rede.md  1.3-rollout-rollback.md  1.3-topologia-ambientes.md  README.md
docs/architecture/adr/: 0001-separacao-control-execution-plane.md  0002-ai-gateway-multi-llm.md  0003-registry-abstraction.md  0004-editor-engine-monaco.md  0005-eventos-pubsub.md  0006-telemetria-opentelemetry.md  README.md  template.md
docs/discovery/: 1.1-baseline-priorizacao.md  1.1-mapa-jornadas.md  1.1-visao-produto.md  README.md
spikes/rbac/: README.md  pyproject.toml
spikes/rbac/app/: audit.py  deps.py  main.py  models.py  policy.py
spikes/rbac/tests/: test_api.py  test_policy.py  test_scoping.py
